--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -4,7 +4,7 @@
         bootstrap="Tests/bootstrap.php"
         >
     <testsuites>
-        <testsuite name="Snowcap CacheBundle Test Suite">
+        <testsuite name="Leapt CacheBundle Test Suite">
             <directory>./Tests/</directory>
         </testsuite>
     </testsuites>
