Symfony 4: class name as identifier

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,4 +1,3 @@
 services:
-    leapt_cache.manager:
-        class: Leapt\CacheBundle\Manager\CacheManager
+    Leapt\CacheBundle\Manager\CacheManager:
         arguments: [ "%leapt_cache.namespace%", "%leapt_cache.caches%" ]
